--- a/index.html
+++ b/index.html
@@ -1,9 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt-BR">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+      <meta name="theme-color" content="#000000" />
+      <meta name="description" content="Arthur Harysson - Frontend Developer" />
+      <meta name="keywords" content="Arthur Harysson, Frontend Developer, React, TypeScript" />
+      <meta name="author" content="Arthur Harysson" />
+      <meta name="robots" content="index, follow" />
+      <meta name="google-site-verification" content="your-google-site-verification-code" />
+      <meta name="google" content="notranslate" />
+      <meta name="apple-mobile-web-app-capable" content="yes" />
+      <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+      <meta name="apple-mobile-web-app-title" content="Arthur Harysson" />
+    <title>Arthur Harysson</title>
   </head>
   <body>
     <div id="root"></div>
